src/web/static/src/index.css
* {
    font-family: sans-serif;
}

.header {
    text-align: center;
}

.button {
    width: 100%;
    margin: .25em;
    padding: .5em 1em;
    display: block;

    box-sizing: border-box;

    text-align: center;
    text-decoration: none;

    cursor: pointer;

    color: white;
    background-color: seagreen;
    border: none;
    border-radius: 4px;
}

.button-secondary {
    color: black;
    background-color: lightgray;
}

.button:hover {
    background-color: darkseagreen;
}

.button-secondary:hover {
    color: seagreen;
    background-color: white;
}


#upload, #download {
    width: 60vw;
    margin: .5rem;
    padding: 1.5rem;

    border-radius: 1rem;
    background-color: aliceblue;

    box-sizing: border-box;
}

/* medium screens and larger */
@media screen and (min-width: 36em) {
    #upload, #download {
        width: 24em;
    }
}

.content {
    margin: auto;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

